2Kg fixed